--- a/earthquakes.html
+++ b/earthquakes.html
@@ -54,6 +54,18 @@
   attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
   });
   
+  
+  // Basemap dictonary
+  var basemaps = {
+   "Open Street Map DE": osm_basemap,
+   "Open Topo Map": otm_basemap,
+   "Open Street Map INT": osmint_basemap
+  };
+ 
+  // Layer control
+  var legend = L.control.layers(basemaps).addTo(mymap);
+ 
+  
  </script>
 
 </body>
