--- a/earthquakes.html
+++ b/earthquakes.html
@@ -65,7 +65,7 @@
   // Layer control
   var legend = L.control.layers(basemaps, null, {collapsed: false, position: "topleft"}).addTo(mymap);
 
- 
+  var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
   
  </script>
 
