--- a/earthquakes.html
+++ b/earthquakes.html
@@ -18,6 +18,8 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
   <!-- styles for elements html and body: fullscreen  -->
+  <!-- Loading external data -->
+  <script src="earthquake_points.js"></script>
  <style>
   html, body {
  	 width: 100%;
@@ -66,6 +68,9 @@
   var legend = L.control.layers(basemaps, null, {collapsed: false, position: "topleft"}).addTo(mymap);
 
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
+  
+  // External data
+  var overlay_eq_points = L.geoJSON(eq_points).addTo(mymap);
   
  </script>
 
