--- a/earthquakes.html
+++ b/earthquakes.html
@@ -69,7 +69,7 @@
 
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
   
-  // External data
+  // External data earthquakes
   var overlay_eq_points = L.geoJSON(eq_points).addTo(mymap);
   
  </script>
