--- a/earthquakes.html
+++ b/earthquakes.html
@@ -70,7 +70,20 @@
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
   
   // External data earthquakes
-  var overlay_eq_points = L.geoJSON(eq_points).addTo(mymap);
+  // Visualize
+  var orangeMarker = {
+  radius: 8,
+  fillColor: "#ff7800",
+  color: "#000",
+  weight: 1,
+  opacity: 1,
+  fillOpacity: 0.6
+  };
+  //Adding earthquake data
+  var overlay_eq_points = L.geoJSON(eq_points, {
+  pointToLayer: function (feature, latlng) {
+  return L.circleMarker(latlng, orangeMarker);
+  }}).addTo(mymap);
   
  </script>
 
