--- a/earthquakes.html
+++ b/earthquakes.html
@@ -19,7 +19,7 @@
    crossorigin=""></script>
   <!-- styles for elements html and body: fullscreen  -->
   <!-- Loading external data -->
-  <script src="earthquake_points.js"></script>
+  <script src="earthquake_points.geojson"></script>
  <style>
   html, body {
  	 width: 100%;
