--- a/earthquakes.html
+++ b/earthquakes.html
@@ -64,10 +64,10 @@
    "Open Street Map INT": osmint_basemap
   };
  
-  // Layer control
-  var legend = L.control.layers(basemaps, null, {collapsed: false, position: "topleft"}).addTo(mymap);
-
-  var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
+ // Overlay dictonary
+ var overlays = {
+ "Earthquakes": overlay_eq_points
+ };
   
   // External data earthquakes
   // Visualize
@@ -84,6 +84,11 @@
   pointToLayer: function (feature, latlng) {
   return L.circleMarker(latlng, orangeMarker);
   }}).addTo(mymap);
+  
+  // Layer control
+  var legend = L.control.layers(basemaps,overlays, null, {collapsed: false, position: "topleft"}).addTo(mymap);
+
+  var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
   
  </script>
 
