--- a/earthquakes.html
+++ b/earthquakes.html
@@ -97,7 +97,7 @@ function popUpFunction(feature, layer) {
   };
   
   // Layer control
-  var legend = L.control.layers(basemaps, overlays, {collapsed: true, position: 'topleft'}).addTo(mymap);
+  var legend = L.control.layers(basemaps, overlays, {collapsed: false, position: 'topleft'}).addTo(mymap);
 
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
   
