--- a/earthquakes.html
+++ b/earthquakes.html
@@ -17,6 +17,9 @@
  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
+  <!-- Links to the Leaflet-Ruler Plugin -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/gokertanrisever/leaflet-ruler@master/src/leaflet-ruler.css" integrity="sha384-P9DABSdtEY/XDbEInD3q+PlL+BjqPCXGcF8EkhtKSfSTr/dS5PBKa9+/PMkW2xsY" crossorigin="anonymous">  
+  <script src="https://cdn.jsdelivr.net/gh/gokertanrisever/leaflet-ruler@master/src/leaflet-ruler.js" integrity="sha384-N2S8y7hRzXUPiepaSiUvBH1ZZ7Tc/ZfchhbPdvOE5v3aBBCIepq9l+dBJPFdo1ZJ" crossorigin="anonymous"></script>
   <!-- styles for elements html and body: fullscreen  -->
   <!-- Loading external data -->
   <script src="earthquake_points.geojson"></script>
@@ -98,8 +101,9 @@ function popUpFunction(feature, layer) {
   
   // Layer control
   var legend = L.control.layers(basemaps, overlays, {collapsed: false, position: 'topleft'}).addTo(mymap);
-
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
+  // Leaflet-Ruler measure tool
+  var ruler = L.control.ruler().addTo(mymap);
   
  </script>
 
