--- a/earthquakes.html
+++ b/earthquakes.html
@@ -19,12 +19,12 @@
    crossorigin=""></script>
  <!-- Links to the Leaflet-Ruler Plugin -->
  <link rel="stylesheet" 
-		href="https://cdn.jsdelivr.net/gh/gokertanrisever/leaflet-ruler@master/src/leaflet-ruler.css" 
-		integrity="sha384-P9DABSdtEY/XDbEInD3q+PlL+BjqPCXGcF8EkhtKSfSTr/dS5PBKa9+/PMkW2xsY" 
-		crossorigin="anonymous">  
+	href="https://cdn.jsdelivr.net/gh/gokertanrisever/leaflet-ruler@master/src/leaflet-ruler.css" 
+	integrity="sha384-P9DABSdtEY/XDbEInD3q+PlL+BjqPCXGcF8EkhtKSfSTr/dS5PBKa9+/PMkW2xsY" 
+	crossorigin="anonymous">  
  <script src="https://cdn.jsdelivr.net/gh/gokertanrisever/leaflet-ruler@master/src/leaflet-ruler.js" 
-		integrity="sha384-N2S8y7hRzXUPiepaSiUvBH1ZZ7Tc/ZfchhbPdvOE5v3aBBCIepq9l+dBJPFdo1ZJ" 
-		crossorigin="anonymous"></script>
+	integrity="sha384-N2S8y7hRzXUPiepaSiUvBH1ZZ7Tc/ZfchhbPdvOE5v3aBBCIepq9l+dBJPFdo1ZJ" 
+	crossorigin="anonymous"></script>
  <!-- styles for elements html and body: fullscreen  -->
  <!-- Loading external data -->
  <script src="earthquake_points.geojson"></script>
@@ -104,11 +104,10 @@ function popUpFunction(feature, layer) {
   "Earthquakes": overlay_eq_points
   };
   
-  // Layer control
+  // Layer controls
   var legend = L.control.layers(basemaps, overlays, {collapsed: false, position: 'topleft'}).addTo(mymap);
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
-  // Leaflet-Ruler measure tool
-  var ruler = L.control.ruler().addTo(mymap);
+  var ruler = L.control.ruler(position: 'topleft').addTo(mymap);
   
  </script>
 
