--- a/earthquakes.html
+++ b/earthquakes.html
@@ -107,7 +107,7 @@ function popUpFunction(feature, layer) {
   // Layer controls
   var legend = L.control.layers(basemaps, overlays, {collapsed: false, position: 'topleft'}).addTo(mymap);
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
-  var ruler = L.control.ruler(position: 'topleft').addTo(mymap);
+  var ruler = L.control.ruler().addTo(mymap);
   
  </script>
 
