--- a/earthquakes.html
+++ b/earthquakes.html
@@ -86,15 +86,24 @@
   opacity: 1,
   fillOpacity: 0.6
   };
+  // Visualize Options Ruler
+  var rulerOptions = {
+  position: 'topleft',
+  lengthUnit: {
+	factor: 1000, // from km to m
+	display: 'm',
+	decimal: 0,
+	label: "Distance"
+	},};
   
   // Add popup function
-function popUpFunction(feature, layer) {
- var popupContent = "<b>Date: </b>"+feature.properties.EV_DATE+
+  function popUpFunction(feature, layer) {
+  var popupContent = "<b>Date: </b>"+feature.properties.EV_DATE+
   "<br><b>Latitude: </b>"+ feature.properties.LAT+
   "<br><b>Longitude: </b>"+ feature.properties.LON.toFixed(1)+
   "<br><b>Magnitude: </b>"+ feature.properties['MAG'];
- layer.bindPopup(popupContent);
-};
+  layer.bindPopup(popupContent);
+  };
   
   //Adding earthquake data
   var overlay_eq_points = L.geoJSON(eq_points, {
@@ -111,7 +120,7 @@ function popUpFunction(feature, layer) {
   // Layer controls
   var legend = L.control.layers(basemaps, overlays, {collapsed: false, position: 'topleft'}).addTo(mymap);
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
-  var ruler = L.control.ruler().addTo(mymap);
+  var ruler = L.control.ruler(options).addTo(mymap);
   
  </script>
 
