--- a/earthquakes.html
+++ b/earthquakes.html
@@ -120,7 +120,7 @@
   // Layer controls
   var legend = L.control.layers(basemaps, overlays, {collapsed: false, position: 'topleft'}).addTo(mymap);
   var scale = L.control.scale({maxWidth: 150, metric: true, imperial: true}).addTo(mymap); 
-  var ruler = L.control.ruler(options).addTo(mymap);
+  var ruler = L.control.ruler(rulerOptions).addTo(mymap);
   
  </script>
 
