--- a/earthquakes.html
+++ b/earthquakes.html
@@ -79,7 +79,7 @@
   // External data earthquakes
   // Visualize
   var orangeMarker = {
-  radius: 8,
+  radius: ~ data$INTENSITY,
   fillColor: "#ff7800",
   color: "#000",
   weight: 1,
